--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,27 +3,38 @@
   margin: 0;
   padding: 0;
 }
-.container {
-  max-width: 800px;
-  margin: auto;
+.center-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  border-style: solid;
-  border-width: 5px;
-  border-color: black;
+  min-height: 100vh;
 }
 .row {
   margin: 20px 0px 20px 0px;
 }
 form {
+  margin: auto;
   display: none;
 }
+p {
+  margin: 20px 20px 20px 20px;
+}
 #gameStats {
+  margin: auto;
   display: none;
 }
 #restartBtn {
-  margin-top: 25px;
+  padding: 20px 40px 20px 40px;
+  margin: auto;
   display: none;
 }
-#timer {
-  margin-bottom: 50px;
+#startBtn {
+  padding: 20px 40px 20px 40px;
+  margin: auto;
+}
+#submitBtn {
+  padding: 20px 40px 20px 40px;
+  margin: auto;
 }
