--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,21 @@
   margin: 0;
   padding: 0;
 }
+body {
+  color: white;
+  background-image: url(/assets/images/background.jpg);
+  background-size: 100% 100%;
+  font-family: "Alegreya Sans", sans-serif;
+}
+h1 {
+  font-size: 75px;
+}
+h2 {
+  font-size: 50px;
+}
+h3 {
+  font-size: 30px;
+}
 .center-screen {
   display: flex;
   flex-direction: column;
@@ -18,23 +33,38 @@ form {
   margin: auto;
   display: none;
 }
-p {
-  margin: 20px 20px 20px 20px;
+h4 {
+  margin: 20px 20px;
 }
 #gameStats {
   margin: auto;
   display: none;
 }
+
 #restartBtn {
-  padding: 20px 40px 20px 40px;
+  color: white;
+  border-radius: 100%;
+  font-size: xx-large;
+  border-style: none;
+  background-color: rgb(182, 52, 143);
+  padding: 30px 50px;
   margin: auto;
-  display: none;
 }
 #startBtn {
-  padding: 20px 40px 20px 40px;
+  color: white;
+  border-radius: 100%;
+  font-size: xx-large;
+  border-style: none;
+  background-color: rgb(137, 59, 194);
+  padding: 30px 50px;
   margin: auto;
 }
 #submitBtn {
-  padding: 20px 40px 20px 40px;
+  color: white;
+  border-radius: 100%;
+  font-size: xx-large;
+  border-style: none;
+  background-color: rgb(92, 165, 233);
+  padding: 30px 50px;
   margin: auto;
 }
